--- a/css/variables.css
+++ b/css/variables.css
@@ -1,23 +1,23 @@
+/* Poppins */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+/* Delius */
+@import url("https://fonts.googleapis.com/css2?family=Delius&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 :root {
 
     /* Colors */
-    --colorMain: black;
-    --colorHeader: white;
-    --colorList: rgb(177, 62, 54);
-    --colorSelected: rgb(235, 206, 154);
-    --colorPrice: floralwhite;
-    --colorBgHeader: rgb(234, 80, 71);
-    --colorBgNav: rgb(39, 53, 74);
-    --colorBgQuote: lightgrey;
-    --colorBgArticle: lightgoldenrodyellow;
+    ---textColor: #fffaf0;
+    ---colorBgMain: #7a9364;
+    ---colorBgSecondary: #c6d48d;
+    ---colorBackground: #fffaf0;
+    ---colorContrast: #7d5733;
 
     /* Fonts */
-    /* Neo-Grotesque */
-    --fontMain: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
+
+    /* Poppins */
+    ---fontMain: 'Poppins', sans-serif;
     /* Handwritten */
-    --fontTitle: 'Segoe Print', 'Bradley Hand', Chilanka, TSCu_Comic, casual, cursive;
-    /* Industrial */
-    --fontNav: Bahnschrift, 'DIN Alternate', 'Franklin Gothic Medium', 'Nimbus Sans Narrow', sans-serif-condensed, sans-serif;
-    /* Geometric Humanist */
-    --fontList: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
+    ---fontTitle: 'Delius', cursive;
+
 }
